# RAG_PRACTICE

./: README.md  pyproject.toml  requirements.txt
src/: __main__.py  run.py
src/api/: routes.py
src/app/: __init__.py
src/app/core/: __init__.py
src/rag_code/: __init__.py  databse_injector.py  embedder.py
src/utils/: Dial_CLient.py
