[project]
name = "rag-practice"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Srinjoy Sur",email = "srinjoy_sur@epam.com"}
]
readme = "README.md"
requires-python = ">3.13,<4.0.0"
dependencies = [
    "langchain (==1.2.10)",
    "langchain-huggingface (==1.2.0)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.13.3)",
    "aiosignal (==1.4.0)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "appdirs (==1.4.4)",
    "attrs (==25.4.0)",
    "blinker (==1.9.0)",
    "certifi (==2026.1.4)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "dataclasses-json (==0.6.7)",
    "datasets (==4.5.0)",
    "dill (==0.4.0)",
    "diskcache (==5.6.3)",
    "distro (==1.9.0)",
    "docstring-parser (==0.17.0)",
    "dotenv (==0.9.9)",
    "filelock (==3.24.3)",
    "flask (==3.1.3)",
    "frozenlist (==1.8.0)",
    "fsspec (==2025.10.0)",
    "greenlet (==3.3.1)",
    "h11 (==0.16.0)",
    "hf-xet (==1.2.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "httpx-sse (==0.4.3)",
    "idna (==3.11)",
    "instructor (==1.14.5)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "jiter (==0.11.1)",
    "jsonpatch (==1.33)",
    "jsonpointer (==3.0.0)",
    "langchain-classic (==1.0.1)",
    "langchain-community (==0.4.1)",
    "langchain-core (==1.2.14)",
    "langchain-openai (==1.1.10)",
    "langchain-text-splitters (==1.1.1)",
    "langgraph (==1.0.9)",
    "langgraph-checkpoint (==4.0.0)",
    "langgraph-prebuilt (==1.0.8)",
    "langgraph-sdk (==0.3.8)",
    "langsmith (==0.7.5)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "marshmallow (==3.26.2)",
    "mdurl (==0.1.2)",
    "multidict (==6.7.1)",
    "multiprocess (==0.70.18)",
    "mypy-extensions (==1.1.0)",
    "nest-asyncio (==1.6.0)",
    "numpy (==2.4.2)",
    "openai (==2.21.0)",
    "orjson (==3.11.7)",
    "ormsgpack (==1.12.2)",
    "packaging (==26.0)",
    "pandas (==3.0.1)",
    "pillow (==12.1.1)",
    "propcache (==0.4.1)",
    "pyarrow (==23.0.1)",
    "pydantic (==2.12.5)",
    "pydantic-settings (==2.13.1)",
    "pydantic-core (==2.41.5)",
    "pygments (==2.19.2)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.2.1)",
    "pyyaml (==6.0.3)",
    "ragas (==0.4.3)",
    "regex (==2026.2.19)",
    "requests (==2.32.5)",
    "requests-toolbelt (==1.0.0)",
    "rich (==14.3.3)",
    "safetensors (==0.7.0)",
    "scikit-network (==0.33.5)",
    "scipy (==1.17.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.46)",
    "tenacity (==9.1.4)",
    "tiktoken (==0.12.0)",
    "tokenizers (==0.22.2)",
    "tqdm (==4.67.3)",
    "typer (==0.24.0)",
    "typer-slim (==0.24.0)",
    "typing-inspect (==0.9.0)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.3)",
    "urllib3 (==2.6.3)",
    "uuid-utils (==0.14.0)",
    "uvicorn (==0.41.0)",
    "werkzeug (==3.1.6)",
    "xxhash (==3.6.0)",
    "yarl (==1.22.0)",
    "zstandard (==0.25.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "flagembedding (>=1.3.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
