[project]
name = "rag-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Srinjoy Sur",email = "srinjoy_sur@epam.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "werkzeug (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "langgraph (>=1.0.9,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pypdf (>=6.7.3,<7.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
